--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -60,3 +60,55 @@
 .more-cards{
     padding-left: 6%;
 }
+
+@media (max-width: 1024px) {
+    .hero-caption .title-cards{
+        display: none;
+    }
+    .banner-img{
+        height: auto;
+    }
+    .hero-btns{
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 800px){
+    .hero-caption{
+        padding-left: 4%;
+    }
+    .banner-img{
+        height: auto;
+    }
+    .caption-img{
+        margin-bottom: 10px;
+        width: 40%;
+    }
+    .hero-caption p{
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+    .btn img{
+        width: 20px;
+    }
+    .more-cards{
+        padding-left: 4%;
+    }
+}
+
+@media (max-width: 500px){
+    .caption-img{
+        display: none;
+    }
+    .banner-img{
+        height: auto;
+    }
+    .btn img{
+        width: 15px;
+    }
+    .hero-btns .btn{
+        padding: 4px 10px;
+        gap: 5px;
+        font-size: 10px;
+    }
+}
